--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ wabanex-*.tar
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+# .elixir_ls extension folder
+.elixir_ls
